// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Invalid APIs (specification validation) > components / definitions > should catch a component schema name that contains a space > OpenAPI 3.1 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "PROPERTY must match pattern "^[a-zA-Z0-9._-]+$"

  26 |   "components": {
  27 |     "securitySchemes": {
> 28 |       "Basic Access Authentication": {
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must match pattern ^[a-zA-Z0-9._-]+$
  29 |         "type": "apiKey",
  30 |         "name": "API-TOKEN",
  31 |         "in": "header"",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > components / definitions > should catch a component schema name that contains invalid characters > OpenAPI 3.1 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "PROPERTY must match pattern "^[a-zA-Z0-9._-]+$"

  36 |   "components": {
  37 |     "schemas": {
> 38 |       "User«Information»": {
     |       ^^^^^^^^^^^^^^^^^^^ must match pattern ^[a-zA-Z0-9._-]+$
  39 |         "type": "object",
  40 |         "properties": {
  41 |           "first": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > given a parameter with both schema and content > OpenAPI 3.1 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "IF must match "else" schema

   9 |       "get": {
  10 |         "parameters": [
> 11 |           {
     |           ^ if must match "else" schema
  12 |             "name": "filter",
  13 |             "in": "query",
  14 |             "schema": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > given a parameter with both schema and content > OpenAPI 3.x > should catch an error by default 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "NOT must NOT be valid

   9 |       "get": {
  10 |         "parameters": [
> 11 |           {
     |           ^ not must NOT be valid
  12 |             "name": "filter",
  13 |             "in": "query",
  14 |             "schema": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > given a parameter with empty content > OpenAPI 3.1 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "TYPE must be object

  12 |             "name": "filter",
  13 |             "in": "query",
> 14 |             "content": null
     |                        ^ type must be object
  15 |           },
  16 |           {
  17 |             "name": "test",",
    },
    {
      "message": "MINPROPERTIES must NOT have fewer than 1 properties

  17 |             "name": "test",
  18 |             "in": "query",
> 19 |             "content": {}
     |                        ^ minProperties must NOT have fewer than 1 properties
  20 |           }
  21 |         ],
  22 |         "responses": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > given a parameter with empty content > OpenAPI 3.x > should catch an error by default 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "TYPE must be object

  12 |             "name": "filter",
  13 |             "in": "query",
> 14 |             "content": null
     |                        ^ type must be object
  15 |           },
  16 |           {
  17 |             "name": "test",",
    },
    {
      "message": "MINPROPERTIES must NOT have fewer than 1 properties

  17 |             "name": "test",
  18 |             "in": "query",
> 19 |             "content": {}
     |                        ^ minProperties must NOT have fewer than 1 properties
  20 |           }
  21 |         ],
  22 |         "responses": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > should catch a parameter with both schema and content > OpenAPI 3.1 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "IF must match "else" schema

   9 |       "get": {
  10 |         "parameters": [
> 11 |           {
     |           ^ if must match "else" schema
  12 |             "name": "filter",
  13 |             "in": "query",
  14 |             "schema": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > should catch a parameter with both schema and content > OpenAPI 3.x 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "NOT must NOT be valid

   9 |       "get": {
  10 |         "parameters": [
> 11 |           {
     |           ^ not must NOT be valid
  12 |             "name": "filter",
  13 |             "in": "query",
  14 |             "schema": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > should catch a parameter with empty content > OpenAPI 3.0 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "TYPE must be object

  12 |             "name": "filter",
  13 |             "in": "query",
> 14 |             "content": null
     |                        ^ type must be object
  15 |           },
  16 |           {
  17 |             "name": "test",",
    },
    {
      "message": "MINPROPERTIES must NOT have fewer than 1 properties

  17 |             "name": "test",
  18 |             "in": "query",
> 19 |             "content": {}
     |                        ^ minProperties must NOT have fewer than 1 properties
  20 |           }
  21 |         ],
  22 |         "responses": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > should catch a parameter with empty content > OpenAPI 3.1 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "TYPE must be object

  12 |             "name": "filter",
  13 |             "in": "query",
> 14 |             "content": null
     |                        ^ type must be object
  15 |           },
  16 |           {
  17 |             "name": "test",",
    },
    {
      "message": "MINPROPERTIES must NOT have fewer than 1 properties

  17 |             "name": "test",
  18 |             "in": "query",
> 19 |             "content": {}
     |                        ^ minProperties must NOT have fewer than 1 properties
  20 |           }
  21 |         ],
  22 |         "responses": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > parameter content validation > should catch a parameter with empty content > OpenAPI 3.x 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "TYPE must be object

  12 |             "name": "filter",
  13 |             "in": "query",
> 14 |             "content": null
     |                        ^ type must be object
  15 |           },
  16 |           {
  17 |             "name": "test",",
    },
    {
      "message": "MINPROPERTIES must NOT have fewer than 1 properties

  17 |             "name": "test",
  18 |             "in": "query",
> 19 |             "content": {}
     |                        ^ minProperties must NOT have fewer than 1 properties
  20 |           }
  21 |         ],
  22 |         "responses": {",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (specification validation) > should catch invalid discriminators > OpenAPI 3.0 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "TYPE must be object

  19 |               "schema": {
  20 |                 "type": "object",
> 21 |                 "discriminator": "",
     |                                  ^ type must be object
  22 |                 "properties": {
  23 |                   "appKey": {
  24 |                     "type": "string"",
    },
    {
      "message": "TYPE must be object

  39 |                 "schema": {
  40 |                   "type": "object",
> 41 |                   "discriminator": "",
     |                                    ^ type must be object
  42 |                   "properties": {
  43 |                     "accessToken": {
  44 |                       "type": "string"",
    },
    {
      "message": "TYPE must be object

  64 |       "TokenCreateRequest": {
  65 |         "type": "object",
> 66 |         "discriminator": "",
     |                          ^ type must be object
  67 |         "properties": {
  68 |           "appKey": {
  69 |             "type": "string"",
    },
    {
      "message": "TYPE must be object

  76 |       "Token": {
  77 |         "type": "object",
> 78 |         "discriminator": "",
     |                          ^ type must be object
  79 |         "properties": {
  80 |           "accessToken": {
  81 |             "type": "string"",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;
